--- a/index.html
+++ b/index.html
@@ -68,7 +68,16 @@
             </a>
           </label>
         </div>
+         <div class="btn-group" role="group" data-toggle="buttons">
+          <label class="btn btn-default">
+            <input type="checkbox" id="toggleCollapseAll">
+            <span class="glyphicon glyphicon-chevron-up"></span>
+            <span class="glyphicon glyphicon-chevron-down"></span>
+            Collapse All
+          </label>
+        </div>
       </div>
+    </div>
       <!-- PLAYTHROUGH START -->
       <div class="tab-pane active" id="tabPlaythrough">
         <!-- Toolbar -->
