--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
               Hide Completed
             </a>
           </label>
-        </div>
+              </div>
+        <!--- Collapse All Button -->
          <div class="btn-group" role="group" data-toggle="buttons">
-          <label class="btn btn-default">
-            <input type="checkbox" id="toggleCollapseAll">
+              <label class="btn btn-default">
+                <input type="checkbox" id="toggleCollapseAll">
             <span class="glyphicon glyphicon-chevron-up"></span>
             <span class="glyphicon glyphicon-chevron-down"></span>
             Collapse All
           </label>
         </div>
       </div>
-    </div>
       <!-- PLAYTHROUGH START -->
       <div class="tab-pane active" id="tabPlaythrough">
         <!-- Toolbar -->
